<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="activity"
                  type="com.owner.usercenter.findpwd.FindPwdActivity"/>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/find_user_password"
                app:titleTextColor="@color/white"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/loginForm"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <ScrollView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                        android:id="@+id/email_login_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                        <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:layout_marginTop="24dp"
                                android:paddingLeft="@dimen/activity_horizontal_margin"
                                android:paddingRight="@dimen/activity_horizontal_margin"
                                app:counterEnabled="true"
                                app:counterMaxLength="11">

                            <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/tvMobilePhone"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableLeft="@mipmap/icon_phone"
                                    android:hint="@string/register_hint_mobliephone"
                                    android:maxLines="1"
                                    android:singleLine="true"/>

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnGetVerifyCode"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_gravity="center_vertical"
                                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:text="@string/find_get_verify"
                                android:textSize="12sp"
                                android:textColor="@color/blue"/>
                    </LinearLayout>


                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:paddingLeft="@dimen/activity_horizontal_margin"
                            android:paddingRight="@dimen/activity_horizontal_margin"
                    >

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tvVerifyCode"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@mipmap/icon_verify_code"
                                android:hint="@string/verify_code"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:singleLine="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                            android:id="@+id/btnNext"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginTop="32dp"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:background="@drawable/selector_login_signin_button"
                            android:text="@string/next"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"/>


                </LinearLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>