<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/change_pwd"
                app:titleTextColor="@color/white"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/resetForm"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <ScrollView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                        android:id="@+id/reset_password_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <ImageView
                                android:id="@+id/icGithub"
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:layout_marginStart="@dimen/activity_horizontal_margin"
                                android:layout_marginTop="36dp"
                                android:src="@mipmap/ic_user"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toLeftOf="@+id/tvTips"
                                app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                                android:id="@+id/tvTips"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="32dp"
                                android:text="@string/change_password"
                                android:textColor="@color/primaryTextColor"
                                android:textSize="24sp"
                                app:layout_constraintBottom_toBottomOf="@+id/icGithub"
                                app:layout_constraintLeft_toRightOf="@+id/icGithub"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/icGithub"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:paddingLeft="@dimen/activity_horizontal_margin"
                            android:paddingRight="@dimen/activity_horizontal_margin">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tvOldPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@mipmap/icon_pwd"
                                android:hint="@string/reset_old_password"
                                android:maxLines="1"
                                android:singleLine="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:paddingLeft="@dimen/activity_horizontal_margin"
                            android:paddingRight="@dimen/activity_horizontal_margin">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tvNewPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@mipmap/icon_pwd"
                                android:hint="@string/reset_new_password"
                                android:maxLines="1"
                                android:singleLine="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:paddingLeft="@dimen/activity_horizontal_margin"
                            android:paddingRight="@dimen/activity_horizontal_margin"
                            app:counterEnabled="true"
                            app:counterMaxLength="11">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tvAgainPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@mipmap/icon_pwd"
                                android:hint="@string/reset_again_password"

                                android:maxLines="1"
                                android:singleLine="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                            android:id="@+id/btnReset"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginTop="32dp"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:background="@drawable/selector_login_signin_button"
                            android:text="@string/change_pwd"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"/>


                </LinearLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>