<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="activity"
                  type="com.owner.usercenter.login.LoginActivity"/>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
    >

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/login_sign_in"
                app:titleTextColor="@color/white"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/loginForm"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <ScrollView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                        android:id="@+id/email_login_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <ImageView
                                android:id="@+id/icGithub"
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:layout_marginStart="@dimen/activity_horizontal_margin"
                                android:layout_marginTop="36dp"
                                android:src="@mipmap/ic_user"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toLeftOf="@+id/tvTips"
                                app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                                android:id="@+id/tvTips"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="32dp"
                                android:text="@string/login_tips"
                                android:textColor="@color/primaryTextColor"
                                android:textSize="24sp"
                                app:layout_constraintBottom_toBottomOf="@+id/icGithub"
                                app:layout_constraintLeft_toRightOf="@+id/icGithub"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/icGithub"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:paddingLeft="@dimen/activity_horizontal_margin"
                            android:paddingRight="@dimen/activity_horizontal_margin"

                            >

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tvMobilePhone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/login_hint_mobilephone"
                                android:maxLines="1"
                                android:singleLine="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:paddingLeft="@dimen/activity_horizontal_margin"
                            android:paddingRight="@dimen/activity_horizontal_margin"
                            app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tvPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/login_hint_password"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                            android:id="@+id/btnLogin"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginTop="32dp"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:background="@drawable/selector_login_signin_button"
                            android:text="@string/login_sign_in"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"/>
                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <TextView
                                android:id="@+id/tv_forget_password"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="忘记密码?"
                                android:textSize="16sp"
                                android:textColor="@color/secondaryTextGray"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintBottom_toBottomOf="@+id/ckAutoLogin"
                                app:layout_constraintTop_toTopOf="@+id/ckAutoLogin"
                                android:layout_marginEnd="16dp"/>
                        <CheckBox
                                android:id="@+id/ckAutoLogin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="@={activity.viewModel.isAutoLogin()}"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="@dimen/activity_horizontal_margin"
                                android:layout_gravity="center_vertical"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="自动登录"
                                android:textSize="16sp"
                                android:textColor="@color/secondaryTextGray"
                                app:layout_constraintStart_toEndOf="@+id/ckAutoLogin"
                                app:layout_constraintBottom_toBottomOf="@+id/ckAutoLogin"
                                app:layout_constraintTop_toTopOf="@+id/ckAutoLogin"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:bind_view_visibility="@{activity.viewModel.isVisiblity()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>